# aiwhisperer-core

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
architecture/: reservoir_layer.md
config/: example_manifest.json
config/fixtures/: auto_targeting.json  fraud_abuse.json  mass_surveillance.json  soc_triage.json  trust_safety.json
config/profiles/: auto_targeting.json  fraud_abuse.json  mass_surveillance.json  soc_triage.json  trust_safety.json
docs/: benchmark_spec.md  defender_profiles.md  glossary.md  next_paper_outline.md  research_agenda.md  research_findings.md  results_memo_v1.md  safety_scope.md  whitepaper_stub.md
results/: fraud_abuse_baseline.json  fraud_abuse_benign_background.json  fraud_abuse_exact_repetition.json  fraud_abuse_high_diversity.json  fraud_abuse_templated_variation.json  sentinel_analysis.md  sentinel_preservation_notes.md  soc_triage_baseline.json  soc_triage_benign_background.json  soc_triage_exact_repetition.json  soc_triage_high_diversity.json  soc_triage_templated_variation.json  trust_safety_baseline.json  trust_safety_benign_background.json  trust_safety_exact_repetition.json  trust_safety_high_diversity.json  trust_safety_templated_variation.json
results/research/: fraud_abuse_benign_background_all_defenses.json  fraud_abuse_exact_repetition_dedup_off.json  fraud_abuse_exact_repetition_dedup_on.json  fraud_abuse_high_diversity_all_defenses.json  fraud_abuse_high_diversity_clustering_off.json  (+22 more)
tests/: test_benchmark.py
threat_model/: intake_vulnerability.md
(+7 files in other folders)
