[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiwhisperer-core"
version = "0.1.0"
description = "Synthetic intake-resilience benchmark harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aiw-benchmark = "aiwhisperer_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

